--- a/www/html/css/styles.css
+++ b/www/html/css/styles.css
@@ -1,4 +1,6 @@
-
+body {
+  background-color: #f7f9fa;
+}
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   background-color: #f7f9fa;
